extends Panel

# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


func _on_4Y4N37_pressed():
	OS.shell_open("https://sayaneldetf2.itch.io/")
	pass # Replace with function body.


func _on_HiloSven_pressed():
	OS.shell_open("https://hilosven.itch.io/")
	pass # Replace with function body.


func _on_DeveloperMode_pressed():
	OS.shell_open("https://developermode.itch.io/")
	pass # Replace with function body.


func _on_LinkButton_pressed():
	OS.shell_open("https://www.youtube.com/playlist?list=PL1MxstUoDdg-1GK5fQqKjZp9X_L6ltjwQ")
	pass # Replace with function body.
